# Advance-AI-Assistant-FullStack-APP

./: .env.docker  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  config.py  main.py  middlewares.py  pyproject.toml  s3_handler.py  sus-tanj.ipynb
api/ai_base/: __init__.py  ai_title_generator.py  base_ai_agent.py
api/models/: __init__.py  audio_models.py  chat_message_model.py  document_remove_request.py  merge_audio_request.py  request_models.py
api/routers/: __init__.py  ai.py  audio.py  embed.py  search.py
api/services/: __init__.py  audio_transcriber.py  custom_mongo_history_service.py  qdrant_storage.py  rag_service.py  srt_parser.py  vector_service.py  youtube_downloader.py
api/tools/: __init__.py  download_youtbe_video_context.py  rag_search_tool.py  search_on_web.py  summarize_conversation.py
api/utils/: __init__.py  filter_messages_for_ui.py
app/: Dockerfile  nginx.conf  package.json  tailwind.config.js  tsconfig.json
app/src/: App.vue  main.ts
app/src/assets/: AudioPlayer.css  MessageBubble.css  chat.ts  main.css
app/src/components/: AudioPlayer.vue  ChatInput.vue  FileInput.vue  MessageBubble.vue
app/src/layouts/: auth.vue  default.vue
app/src/router/: index.ts
app/src/stores/: ChatStore.ts
app/src/types/: chat.ts
app/src/utils/: copyTextToClipBoard.js  getReadableText.js
app/src/views/: AudioCreateView.vue  BaseView.vue  ChatView.vue  ExportIdea.vue  SettingsView.vue
app/src/views/scripts/: AudioCreateView.vue  DocumentLoaderView.vue
docs/: .gitignore  pyproject.toml
docs/Notebooks/: .~chat.ipynb  Untitled.ipynb  audio_usage.ipynb  chat_messagin.ipynb  create_voice_record.ipynb  file_ref.ipynb  local_s3_test.ipynb  search.ipynb  stt testi.ipynb  vector.ipynb  yt.ipynb
