[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.2",
    "jupyterlab-night>=0.5.2",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "python-slugify>=8.0.4",
    "qdrant-client>=1.16.2",
    "srt>=3.5.3",
    "yt-dlp[default]>=2025.12.8",
]
